@@ -2,6 +2,7 @@ package com.haui.rsa;
 
 import javafx.application.Application;
 import javafx.geometry.Insets;
+import javafx.geometry.Pos;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.layout.*;
@@ -12,533 +13,693 @@ import java.io.File;
 import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.security.SecureRandom;
-import java.util.ArrayList;
-import java.util.List;
+import java.security.*;
+import java.security.spec.*;
+import java.util.Base64;
 
 public class RsaSignatureFxApp extends Application {
 
-
-    // ===================== Shared RSA state =====================
-    static class RsaState {
-        BigInteger p, q, n, phi, e, d;
-        int blockSizeBytes; // size mỗi block plaintext (bytes) đảm bảo < n
+    // ===================== STATE (KEYGEN + SIGN) =====================
+    private static class AppState {
+        PublicKey publicKey;
+        PrivateKey privateKey;
+        String publicPem;
+        String privatePem;
 
         boolean ready() {
-            return n != null && e != null && d != null && blockSizeBytes > 0;
+            return publicKey != null && privateKey != null;
         }
     }
 
-    private final RsaState st = new RsaState();
+    private final AppState st = new AppState();
 
-    // ===================== RSA helpers (học thuật) =====================
-    private static boolean isPrime(BigInteger x) {
-        return x != null && x.compareTo(BigInteger.TWO) >= 0 && x.isProbablePrime(40);
-    }
-
-    private static BigInteger pickE(BigInteger phi) {
-        BigInteger e = BigInteger.valueOf(65537);
-        if (e.compareTo(phi) < 0 && e.gcd(phi).equals(BigInteger.ONE)) return e;
-        e = BigInteger.valueOf(3);
-        while (e.compareTo(phi) < 0 && !e.gcd(phi).equals(BigInteger.ONE)) e = e.add(BigInteger.TWO);
-        return e;
-    }
-
-    private static BigInteger bi(String s) {
-        return new BigInteger(s.trim());
-    }
-
-    private static String toKeyLine(String name, BigInteger v) {
-        return name + "=" + v.toString();
-    }
-
-    private static BigInteger parseKeyLine(List<String> lines, String name) {
-        for (String line : lines) {
-            String t = line.trim();
-            if (t.startsWith(name + "=")) {
-                return new BigInteger(t.substring((name + "=").length()).trim());
-            }
-        }
-        return null;
-    }
-
-    // Tính blockSizeBytes theo n để chunk plaintext: m < n
-    private static int calcBlockSizeBytes(BigInteger n) {
-        // đảm bảo BigInteger(1, blockBytes) < n
-        // blockSizeBytes = floor((bitlen(n)-1)/8)
-        int bs = Math.max(1, (n.bitLength() - 1) / 8);
-        return bs;
-    }
-
-    // Plaintext bytes -> list BigInteger blocks (positive)
-    private static List<BigInteger> splitToBlocks(byte[] data, int blockSize) {
-        List<BigInteger> blocks = new ArrayList<>();
-        for (int i = 0; i < data.length; i += blockSize) {
-            int len = Math.min(blockSize, data.length - i);
-            byte[] chunk = new byte[len];
-            System.arraycopy(data, i, chunk, 0, len);
-            blocks.add(new BigInteger(1, chunk)); // positive
-        }
-        // handle empty input
-        if (data.length == 0) blocks.add(BigInteger.ZERO);
-        return blocks;
-    }
-
-    private static byte[] joinBlocksToBytes(List<byte[]> chunks) {
-        int total = 0;
-        for (byte[] c : chunks) total += c.length;
-        byte[] out = new byte[total];
-        int pos = 0;
-        for (byte[] c : chunks) {
-            System.arraycopy(c, 0, out, pos, c.length);
-            pos += c.length;
-        }
-        return out;
-    }
-
-    // Encrypt: blocks m -> c = m^e mod n (output: decimal blocks separated by space)
-    private static String rsaEncryptText(byte[] plain, BigInteger n, BigInteger e, int blockSize) {
-        List<BigInteger> mBlocks = splitToBlocks(plain, blockSize);
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < mBlocks.size(); i++) {
-            BigInteger m = mBlocks.get(i);
-            if (m.compareTo(n) >= 0) {
-                throw new IllegalArgumentException("Block plaintext >= n (n quá nhỏ). Hãy tăng bit hoặc đổi p,q.");
-            }
-            BigInteger c = m.modPow(e, n);
-            if (i > 0) sb.append(' ');
-            sb.append(c.toString());
-        }
-        return sb.toString();
-    }
-
-    // Decrypt: parse decimal blocks -> m = c^d mod n -> bytes (khôi phục chunk)
-    private static byte[] rsaDecryptText(String cipherText, BigInteger n, BigInteger d) {
-        String ct = cipherText.trim();
-        if (ct.isEmpty()) return new byte[0];
-
-        String[] parts = ct.split("\\s+");
-        List<byte[]> chunks = new ArrayList<>();
-
-        for (String p : parts) {
-            BigInteger c = new BigInteger(p);
-            if (c.signum() < 0 || c.compareTo(n) >= 0) {
-                throw new IllegalArgumentException("Cipher block không hợp lệ (phải 0 <= c < n).");
-            }
-            BigInteger m = c.modPow(d, n);
-            byte[] raw = m.toByteArray();
-            // BigInteger có thể thêm 0 ở đầu để giữ dấu, loại bỏ nếu có
-            if (raw.length > 1 && raw[0] == 0) {
-                byte[] trimmed = new byte[raw.length - 1];
-                System.arraycopy(raw, 1, trimmed, 0, trimmed.length);
-                raw = trimmed;
-            }
-            // Nếu m=0 và raw=[0], coi chunk rỗng (dành cho input rỗng)
-            if (raw.length == 1 && raw[0] == 0) raw = new byte[0];
-            chunks.add(raw);
-        }
-        return joinBlocksToBytes(chunks);
-    }
-
-    // ===================== UI =====================
     @Override
     public void start(Stage stage) {
-        TabPane tabs = new TabPane();
-        tabs.getTabs().add(new Tab("Sinh khóa", tabKeygen(stage)));
-        tabs.getTabs().add(new Tab("Mã hóa", tabEncrypt(stage)));
-        tabs.getTabs().add(new Tab("Giải mã", tabDecrypt(stage)));
-        tabs.getTabs().forEach(t -> t.setClosable(false));
+        TabPane tabPane = new TabPane();
+        tabPane.getTabs().addAll(
+                buildTabKeyGen(stage),
+                buildTabSign(stage),
+                buildTabVerify(stage)
+        );
+        tabPane.setTabClosingPolicy(TabPane.TabClosingPolicy.UNAVAILABLE);
 
-        Scene scene = new Scene(tabs, 980, 560);
-        stage.setTitle("RSA JavaFX - Sinh khóa / Mã hóa / Giải mã (Upload/Download)");
+        Scene scene = new Scene(tabPane, 740, 820);
+        stage.setTitle("RSA - Chữ ký số (JavaFX)");
         stage.setScene(scene);
         stage.show();
     }
 
-    // -------- TAB 1: Keygen + save/load keys --------
-    private Pane tabKeygen(Stage stage) {
-        Label title = new Label("SINH KHÓA RSA");
-        title.setStyle("-fx-font-size: 16px; -fx-font-weight: 700;");
+    // ===================== TAB 1: KEY GEN =====================
+    private Tab buildTabKeyGen(Stage stage) {
+        Tab tab = new Tab("Tạo khóa");
 
-        ToggleGroup tg = new ToggleGroup();
-        RadioButton rbManual = new RadioButton("Tùy chọn (nhập p,q)");
-        RadioButton rbAuto = new RadioButton("Ngẫu nhiên (theo số bit)");
-        rbManual.setToggleGroup(tg);
-        rbAuto.setToggleGroup(tg);
+        VBox root = new VBox(12);
+        root.setPadding(new Insets(18));
+        root.setStyle("");
+
+        Label title = new Label("TẠO THAM SỐ VÀ KHÓA");
+        title.setStyle("-fx-font-size: 24px; -fx-font-weight: bold;");
+        title.setMaxWidth(Double.MAX_VALUE);
+        title.setAlignment(Pos.CENTER);
+
+        ToggleGroup modeGroup = new ToggleGroup();
+        RadioButton rbAuto = new RadioButton("Tự động");
+        rbAuto.setToggleGroup(modeGroup);
         rbAuto.setSelected(true);
 
-        ComboBox<Integer> cbBits = new ComboBox<>();
-        cbBits.getItems().addAll(256, 512, 1024, 2048);
-        cbBits.setValue(1024);
+        RadioButton rbCustom = new RadioButton("Tùy chọn");
+        rbCustom.setToggleGroup(modeGroup);
+
+        ComboBox<Integer> cbKeySize = new ComboBox<>();
+        cbKeySize.getItems().addAll(1024, 2048, 3072, 4096);
+        cbKeySize.setValue(2048);
+        cbKeySize.setPrefWidth(120);
+
+        HBox autoRow = new HBox(12, rbAuto, new Label("Kích thước khóa:"), cbKeySize);
+        autoRow.setAlignment(Pos.CENTER_LEFT);
 
         TextField tfP = new TextField();
         TextField tfQ = new TextField();
+        TextField tfE = new TextField();
+        tfP.setPromptText("p (số nguyên tố)");
+        tfQ.setPromptText("q (số nguyên tố)");
+        tfE.setPromptText("e (vd: 65537)");
 
-        TextField tfN = new TextField(); tfN.setEditable(false);
-        TextField tfPhi = new TextField(); tfPhi.setEditable(false);
-        TextField tfE = new TextField(); tfE.setEditable(false);
-        PasswordField tfDMask = new PasswordField(); tfDMask.setEditable(false);
-        TextField tfD = new TextField(); tfD.setEditable(false);
+        GridPane customGrid = new GridPane();
+        customGrid.setHgap(10);
+        customGrid.setVgap(8);
+        customGrid.add(rbCustom, 0, 0);
+        customGrid.add(new Label("p ="), 0, 1);
+        customGrid.add(tfP, 1, 1);
+        customGrid.add(new Label("q ="), 0, 2);
+        customGrid.add(tfQ, 1, 2);
+        customGrid.add(new Label("e ="), 0, 3);
+        customGrid.add(tfE, 1, 3);
 
-        CheckBox cbShowD = new CheckBox("Hiện d");
-        tfD.setManaged(false); tfD.setVisible(false); // default ẩn
-        cbShowD.setOnAction(e -> {
-            boolean show = cbShowD.isSelected();
-            tfD.setManaged(show); tfD.setVisible(show);
-            tfDMask.setManaged(!show); tfDMask.setVisible(!show);
-        });
+        ColumnConstraints c0 = new ColumnConstraints();
+        c0.setPrefWidth(30);
+        ColumnConstraints c1 = new ColumnConstraints();
+        c1.setHgrow(Priority.ALWAYS);
+        customGrid.getColumnConstraints().addAll(c0, c1);
 
-        Button btnGen = new Button("Sinh khóa");
-        Button btnSaveKeys = new Button("Tải key xuống (save)");
-        Button btnLoadKeys = new Button("Đẩy key lên (load)");
-        Label status = new Label();
-
-        Runnable syncMode = () -> {
+        Runnable applyMode = () -> {
             boolean auto = rbAuto.isSelected();
-            cbBits.setDisable(!auto);
+            cbKeySize.setDisable(!auto);
             tfP.setDisable(auto);
             tfQ.setDisable(auto);
+            tfE.setDisable(auto);
         };
-        rbAuto.setOnAction(e -> syncMode.run());
-        rbManual.setOnAction(e -> syncMode.run());
-        syncMode.run();
+        modeGroup.selectedToggleProperty().addListener((obs, o, n) -> applyMode.run());
+        applyMode.run();
+
+        Button btnGen = new Button("Sinh khóa");
+        btnGen.setStyle("-fx-background-color: #ff9aa2; -fx-font-weight: bold;");
+        btnGen.setPrefWidth(120);
+
+        TextArea taPub = new TextArea();
+        taPub.setWrapText(true);
+        taPub.setPrefRowCount(7);
+
+        TextArea taPri = new TextArea();
+        taPri.setWrapText(true);
+        taPri.setPrefRowCount(7);
+
+        Button btnSavePub = new Button("Lưu khóa công khai");
+        btnSavePub.setStyle("-fx-background-color: #4aa3ff; -fx-text-fill: white; -fx-font-weight: bold;");
+
+        Button btnSavePri = new Button("Lưu khóa bí mật");
+        btnSavePri.setStyle("-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;");
+
+        Button btnClear = new Button("Clear");
+        btnClear.setStyle("-fx-background-color: #ff9aa2; -fx-font-weight: bold;");
+        btnClear.setPrefWidth(110);
+
+        Label status = new Label();
+        status.setStyle("-fx-font-weight: bold;");
 
         btnGen.setOnAction(e -> {
             try {
                 if (rbAuto.isSelected()) {
-                    int bits = cbBits.getValue();
-                    SecureRandom rnd = new SecureRandom();
-                    st.p = BigInteger.probablePrime(bits / 2, rnd);
-                    st.q = BigInteger.probablePrime(bits / 2, rnd);
-                    while (st.p.equals(st.q)) st.q = BigInteger.probablePrime(bits / 2, rnd);
+                    int keySize = cbKeySize.getValue();
+                    KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA");
+                    kpg.initialize(keySize, new SecureRandom());
+                    KeyPair kp = kpg.generateKeyPair();
+                    st.publicKey = kp.getPublic();
+                    st.privateKey = kp.getPrivate();
                 } else {
-                    st.p = bi(tfP.getText());
-                    st.q = bi(tfQ.getText());
-                    if (!isPrime(st.p) || !isPrime(st.q)) {
-                        throw new IllegalArgumentException("p và q phải là số nguyên tố.");
-                    }
+                    BigInteger p = parseBigInt(tfP.getText(), "p");
+                    BigInteger q = parseBigInt(tfQ.getText(), "q");
+                    BigInteger ee = tfE.getText().trim().isEmpty()
+                            ? BigInteger.valueOf(65537)
+                            : parseBigInt(tfE.getText(), "e");
+
+                    if (!p.isProbablePrime(50)) throw new IllegalArgumentException("p không phải số nguyên tố.");
+                    if (!q.isProbablePrime(50)) throw new IllegalArgumentException("q không phải số nguyên tố.");
+                    if (p.equals(q)) throw new IllegalArgumentException("p và q không được trùng nhau.");
+
+                    BigInteger n = p.multiply(q);
+                    BigInteger phi = p.subtract(BigInteger.ONE).multiply(q.subtract(BigInteger.ONE));
+                    if (!ee.gcd(phi).equals(BigInteger.ONE))
+                        throw new IllegalArgumentException("e và phi(n) không nguyên tố cùng nhau (gcd != 1).");
+
+                    BigInteger d = ee.modInverse(phi);
+
+                    KeyFactory kf = KeyFactory.getInstance("RSA");
+                    st.publicKey = kf.generatePublic(new RSAPublicKeySpec(n, ee));
+                    st.privateKey = kf.generatePrivate(new RSAPrivateKeySpec(n, d));
                 }
 
-                st.n = st.p.multiply(st.q);
-                st.phi = st.p.subtract(BigInteger.ONE).multiply(st.q.subtract(BigInteger.ONE));
-                st.e = pickE(st.phi);
-                st.d = st.e.modInverse(st.phi);
-                st.blockSizeBytes = calcBlockSizeBytes(st.n);
+                st.publicPem = toPem("PUBLIC KEY", st.publicKey.getEncoded());
+                st.privatePem = toPem("PRIVATE KEY", st.privateKey.getEncoded());
 
-                tfN.setText(st.n.toString());
-                tfPhi.setText(st.phi.toString());
-                tfE.setText(st.e.toString());
-                tfDMask.setText("********");
-                tfD.setText(st.d.toString());
-
-                status.setText("✅ Sinh khóa OK. BlockSize=" + st.blockSizeBytes + " bytes.");
+                taPub.setText(st.publicPem);
+                taPri.setText(st.privatePem);
+                status.setText("✅ Đã sinh khóa thành công.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi sinh khóa: " + ex.getMessage());
+                status.setText("❌ Lỗi: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        btnSaveKeys.setOnAction(e -> {
+        btnSavePub.setOnAction(e -> {
             try {
-                if (!st.ready()) throw new IllegalStateException("Chưa có khóa để lưu.");
-                FileChooser fc = new FileChooser();
-                fc.setInitialFileName("rsa_keys.txt");
-                File f = fc.showSaveDialog(stage);
+                if (st.publicPem == null || st.publicPem.isBlank()) throw new IllegalStateException("Chưa có Public Key.");
+                File f = saveDialog(stage, "public_key.pem");
                 if (f == null) return;
-
-                // Lưu đủ để load lại (p,q,n,phi,e,d,blockSize)
-                List<String> lines = List.of(
-                        toKeyLine("p", st.p),
-                        toKeyLine("q", st.q),
-                        toKeyLine("n", st.n),
-                        toKeyLine("phi", st.phi),
-                        toKeyLine("e", st.e),
-                        toKeyLine("d", st.d),
-                        "blockSizeBytes=" + st.blockSizeBytes
-                );
-                Files.write(f.toPath(), lines, StandardCharsets.UTF_8);
-                status.setText("✅ Đã tải key xuống: " + f.getName());
+                Files.writeString(f.toPath(), st.publicPem, StandardCharsets.UTF_8);
+                status.setText("✅ Đã lưu khóa công khai.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi lưu key: " + ex.getMessage());
+                status.setText("❌ Lỗi lưu public key: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        btnLoadKeys.setOnAction(e -> {
+        btnSavePri.setOnAction(e -> {
             try {
-                FileChooser fc = new FileChooser();
-                File f = fc.showOpenDialog(stage);
+                if (st.privatePem == null || st.privatePem.isBlank()) throw new IllegalStateException("Chưa có Private Key.");
+                File f = saveDialog(stage, "private_key.pem");
                 if (f == null) return;
-
-                List<String> lines = Files.readAllLines(f.toPath(), StandardCharsets.UTF_8);
-                st.p = parseKeyLine(lines, "p");
-                st.q = parseKeyLine(lines, "q");
-                st.n = parseKeyLine(lines, "n");
-                st.phi = parseKeyLine(lines, "phi");
-                st.e = parseKeyLine(lines, "e");
-                st.d = parseKeyLine(lines, "d");
-                BigInteger bsb = parseKeyLine(lines, "blockSizeBytes");
-                st.blockSizeBytes = (bsb != null) ? bsb.intValue() : (st.n != null ? calcBlockSizeBytes(st.n) : 0);
-
-                if (st.n == null || st.e == null || st.d == null) {
-                    throw new IllegalArgumentException("File key thiếu n/e/d.");
-                }
-
-                tfN.setText(st.n.toString());
-                tfPhi.setText(st.phi != null ? st.phi.toString() : "");
-                tfE.setText(st.e.toString());
-                tfDMask.setText("********");
-                tfD.setText(st.d.toString());
-
-                if (rbManual.isSelected()) {
-                    tfP.setText(st.p != null ? st.p.toString() : "");
-                    tfQ.setText(st.q != null ? st.q.toString() : "");
-                }
-
-                status.setText("✅ Đã đẩy key lên (load). BlockSize=" + st.blockSizeBytes + " bytes.");
+                Files.writeString(f.toPath(), st.privatePem, StandardCharsets.UTF_8);
+                status.setText("✅ Đã lưu khóa bí mật.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi load key: " + ex.getMessage());
+                status.setText("❌ Lỗi lưu private key: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        GridPane g = new GridPane();
-        g.setHgap(12);
-        g.setVgap(12);
+        btnClear.setOnAction(e -> {
+            st.publicKey = null;
+            st.privateKey = null;
+            st.publicPem = null;
+            st.privatePem = null;
+            taPub.clear();
+            taPri.clear();
+            tfP.clear();
+            tfQ.clear();
+            tfE.clear();
+            status.setText("");
+        });
 
-        int r = 0;
-        g.add(new HBox(16, rbAuto, new Label("Bits:"), cbBits, rbManual), 0, r, 4, 1);
+        HBox genRow = new HBox(btnGen);
+        genRow.setAlignment(Pos.CENTER);
 
-        r++;
-        g.add(new Label("p"), 0, r);
-        g.add(tfP, 1, r);
-        g.add(new Label("q"), 2, r);
-        g.add(tfQ, 3, r);
+        Label lbPub = new Label("Public Key (PEM):");
+        lbPub.setStyle("-fx-font-weight: bold;");
+        Label lbPri = new Label("Private Key (PEM):");
+        lbPri.setStyle("-fx-font-weight: bold;");
 
-        r++;
-        g.add(btnGen, 0, r);
+        HBox pubBtnRow = new HBox(btnSavePub);
+        pubBtnRow.setAlignment(Pos.CENTER_RIGHT);
 
-        r++;
-        g.add(new Separator(), 0, r, 4, 1);
+        HBox priBtnRow = new HBox(btnSavePri);
+        priBtnRow.setAlignment(Pos.CENTER_RIGHT);
 
-        r++;
-        g.add(new Label("Khóa công khai (Public)"), 0, r, 4, 1);
+        HBox clearRow = new HBox(btnClear);
+        clearRow.setAlignment(Pos.CENTER);
 
-        r++;
-        g.add(new Label("n"), 0, r);
-        g.add(tfN, 1, r, 3, 1);
+        root.getChildren().addAll(
+                title,
+                autoRow,
+                customGrid,
+                genRow,
+                lbPub,
+                taPub,
+                pubBtnRow,
+                lbPri,
+                taPri,
+                priBtnRow,
+                clearRow,
+                status
+        );
 
-        r++;
-        g.add(new Label("e"), 0, r);
-        g.add(tfE, 1, r, 3, 1);
-
-        r++;
-        g.add(new Label("φ(n)"), 0, r);
-        g.add(tfPhi, 1, r, 3, 1);
-
-        r++;
-        g.add(new Label("Khóa bí mật (Private)"), 0, r, 4, 1);
-
-        r++;
-        g.add(new Label("d"), 0, r);
-        g.add(new HBox(10, tfDMask, tfD, cbShowD), 1, r, 3, 1);
-
-        r++;
-        g.add(new HBox(10, btnSaveKeys, btnLoadKeys), 0, r, 4, 1);
-
-        VBox root = new VBox(12, title, g, status);
-        root.setPadding(new Insets(16));
-        return root;
+        tab.setContent(root);
+        return tab;
     }
 
-    // -------- TAB 2: Encrypt + upload/download --------
-    private Pane tabEncrypt(Stage stage) {
-        Label title = new Label("MÃ HÓA (Encrypt)");
-        title.setStyle("-fx-font-size: 16px; -fx-font-weight: 700;");
+    // ===================== TAB 2: SIGN =====================
+    private Tab buildTabSign(Stage stage) {
+        Tab tab = new Tab("Ký văn bản");
 
-        TextArea taPlain = new TextArea();
-        taPlain.setPromptText("Nhập văn bản cần mã hóa...");
-        taPlain.setPrefRowCount(7);
+        VBox root = new VBox(12);
+        root.setPadding(new Insets(18));
+        root.setStyle("");
 
-        TextField tfPlainFile = new TextField();
-        tfPlainFile.setEditable(false);
-        Button btnUploadPlain = new Button("Đẩy file lên (Upload)");
-        final File[] plainFile = {null};
+        Label title = new Label("KÝ VĂN BẢN");
+        title.setStyle("-fx-font-size: 24px; -fx-font-weight: bold;");
+        title.setMaxWidth(Double.MAX_VALUE);
+        title.setAlignment(Pos.CENTER);
 
-        TextArea taCipher = new TextArea();
-        taCipher.setPromptText("Ciphertext (các block số, cách nhau bằng space)...");
-        taCipher.setPrefRowCount(7);
+        TextField tfFile = new TextField();
+        tfFile.setEditable(false);
+        tfFile.setPromptText("Chọn file văn bản...");
 
-        Button btnEncrypt = new Button("Mã hóa");
-        Button btnSaveCipher = new Button("Tải ciphertext xuống (Save)");
+        Button btnOpen = new Button("Mở file");
+        btnOpen.setStyle("-fx-background-color: #2ecc71; -fx-font-weight: bold;");
+
+        HBox fileRow = new HBox(10, new Label("Chọn file văn bản:"), tfFile, btnOpen);
+        fileRow.setAlignment(Pos.CENTER_LEFT);
+        HBox.setHgrow(tfFile, Priority.ALWAYS);
+
+        TextArea taContent = new TextArea();
+        taContent.setWrapText(true);
+        taContent.setPrefRowCount(10);
+
+        ComboBox<String> cbHash = new ComboBox<>();
+        cbHash.getItems().addAll("SHA-256");
+        cbHash.setValue("SHA-256");
+        cbHash.setPrefWidth(120);
+
+        HBox hashRow = new HBox(10, new Label("Thuật toán băm:"), cbHash);
+        hashRow.setAlignment(Pos.CENTER_LEFT);
+
+        Label lbSig = new Label("Nội dung chữ ký (Base64):");
+        lbSig.setStyle("-fx-font-weight: bold;");
+
+        TextArea taSig = new TextArea();
+        taSig.setWrapText(true);
+        taSig.setPrefRowCount(6);
+        taSig.setPromptText("Chữ ký Base64...");
+
+        Button btnSign = new Button("Ký văn bản");
+        btnSign.setStyle("-fx-background-color: #2ecc71; -fx-font-weight: bold;");
+        btnSign.setPrefWidth(120);
+
+        Button btnSaveText = new Button("Lưu văn bản");
+        btnSaveText.setStyle("-fx-background-color: #4aa3ff; -fx-font-weight: bold;");
+        btnSaveText.setPrefWidth(120);
+
+        Button btnSaveSig = new Button("Lưu file chữ ký");
+        btnSaveSig.setStyle("-fx-background-color: #e74c3c; -fx-font-weight: bold; -fx-text-fill: white;");
+        btnSaveSig.setPrefWidth(140);
+
+        HBox btnRow = new HBox(12, btnSign, btnSaveText, btnSaveSig);
+        btnRow.setAlignment(Pos.CENTER);
+
         Label status = new Label();
+        status.setStyle("-fx-font-weight: bold;");
 
-        btnUploadPlain.setOnAction(e -> {
+        final File[] selectedTextFile = {null};
+
+        btnOpen.setOnAction(e -> {
+            File f = openDialog(stage, "Chọn file văn bản", "Text", "*.txt", "*.md", "*.log", "*.*");
+            if (f == null) return;
             try {
-                FileChooser fc = new FileChooser();
-                File f = fc.showOpenDialog(stage);
-                if (f == null) return;
-                plainFile[0] = f;
-                tfPlainFile.setText(f.getAbsolutePath());
-                String content = Files.readString(f.toPath(), StandardCharsets.UTF_8);
-                taPlain.setText(content);
+                selectedTextFile[0] = f;
+                tfFile.setText(f.getAbsolutePath());
+                byte[] bytes = Files.readAllBytes(f.toPath());
+                taContent.setText(new String(bytes, StandardCharsets.UTF_8));
+                status.setText("✅ Đã đọc file văn bản.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi upload plaintext: " + ex.getMessage());
+                status.setText("❌ Lỗi đọc file: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        btnEncrypt.setOnAction(e -> {
+        // Nếu user gõ tay thì coi như không dùng file
+        taContent.textProperty().addListener((o, ov, nv) -> selectedTextFile[0] = null);
+
+        btnSign.setOnAction(e -> {
             try {
-                if (!st.ready()) throw new IllegalStateException("Chưa có khóa. Sang tab 'Sinh khóa' trước.");
-                byte[] plainBytes;
-                if (plainFile[0] != null) {
-                    plainBytes = Files.readAllBytes(plainFile[0].toPath());
+                ensurePrivateKey(stage);
+
+                byte[] msgBytes;
+                if (selectedTextFile[0] != null) {
+                    msgBytes = Files.readAllBytes(selectedTextFile[0].toPath()); // chuẩn nhất
                 } else {
-                    plainBytes = taPlain.getText().getBytes(StandardCharsets.UTF_8);
+                    // normalize newline để consistent
+                    String normalized = taContent.getText().replace("\r\n", "\n");
+                    msgBytes = normalized.getBytes(StandardCharsets.UTF_8);
                 }
-                String cipher = rsaEncryptText(plainBytes, st.n, st.e, st.blockSizeBytes);
-                taCipher.setText(cipher);
-                status.setText("✅ Mã hóa OK. (blockSize=" + st.blockSizeBytes + " bytes)");
+
+                if (msgBytes.length == 0) throw new IllegalStateException("Nội dung văn bản rỗng.");
+
+                Signature sig = Signature.getInstance("SHA256withRSA");
+                sig.initSign(st.privateKey);
+                sig.update(msgBytes);
+                byte[] sigBytes = sig.sign();
+
+                taSig.setText(Base64.getEncoder().encodeToString(sigBytes));
+                status.setText("✅ Thành công: Đã ký văn bản.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi mã hóa: " + ex.getMessage());
+                status.setText("❌ Lỗi ký: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        btnSaveCipher.setOnAction(e -> {
+        btnSaveText.setOnAction(e -> {
             try {
-                String cipher = taCipher.getText().trim();
-                if (cipher.isEmpty()) throw new IllegalStateException("Chưa có ciphertext để lưu.");
-
-                FileChooser fc = new FileChooser();
-                fc.setInitialFileName("ciphertext.txt");
-                File f = fc.showSaveDialog(stage);
+                File f = saveDialog(stage, "van_ban.txt");
                 if (f == null) return;
-
-                Files.writeString(f.toPath(), cipher, StandardCharsets.UTF_8);
-                status.setText("✅ Đã tải ciphertext xuống: " + f.getName());
+                Files.writeString(f.toPath(), taContent.getText(), StandardCharsets.UTF_8);
+                status.setText("✅ Đã lưu văn bản.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi lưu ciphertext: " + ex.getMessage());
+                status.setText("❌ Lỗi lưu văn bản: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        GridPane g = new GridPane();
-        g.setHgap(12);
-        g.setVgap(12);
+        btnSaveSig.setOnAction(e -> {
+            try {
+                String b64 = taSig.getText() == null ? "" : taSig.getText().replaceAll("\\s+", "");
+                if (b64.isEmpty()) throw new IllegalStateException("Chưa có chữ ký để lưu.");
+                File f = saveDialog(stage, "signature.sig");
+                if (f == null) return;
+                Files.writeString(f.toPath(), b64, StandardCharsets.UTF_8);
+                status.setText("✅ Đã lưu file chữ ký.");
+            } catch (Exception ex) {
+                status.setText("❌ Lỗi lưu chữ ký: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
+            }
+        });
 
-        int r = 0;
-        g.add(new Label("Văn bản"), 0, r);
-        g.add(taPlain, 1, r, 3, 1);
+        root.getChildren().addAll(
+                title,
+                fileRow,
+                new Label("Nội dung văn bản:"),
+                taContent,
+                hashRow,
+                lbSig,
+                taSig,
+                btnRow,
+                status
+        );
 
-        r++;
-        g.add(new Label("File"), 0, r);
-        g.add(tfPlainFile, 1, r, 2, 1);
-        g.add(btnUploadPlain, 3, r);
-
-        r++;
-        g.add(new HBox(10, btnEncrypt, btnSaveCipher), 1, r, 3, 1);
-
-        r++;
-        g.add(new Label("Kết quả (ciphertext)"), 0, r);
-        g.add(taCipher, 1, r, 3, 1);
-
-        VBox root = new VBox(12, title, g, status);
-        root.setPadding(new Insets(16));
-        return root;
+        tab.setContent(root);
+        return tab;
     }
 
-    // -------- TAB 3: Decrypt + upload/download --------
-    private Pane tabDecrypt(Stage stage) {
-        Label title = new Label("GIẢI MÃ (Decrypt)");
-        title.setStyle("-fx-font-size: 16px; -fx-font-weight: 700;");
+    // ===================== TAB 3: VERIFY (FULL CONDITIONS + NO CACHE) =====================
+    private Tab buildTabVerify(Stage stage) {
+        Tab tab = new Tab("Xác minh");
 
-        TextArea taCipher = new TextArea();
-        taCipher.setPromptText("Dán ciphertext (các block số, cách nhau bằng space)...");
-        taCipher.setPrefRowCount(7);
+        VBox root = new VBox(12);
+        root.setPadding(new Insets(18));
+        root.setStyle("");
 
-        TextField tfCipherFile = new TextField();
-        tfCipherFile.setEditable(false);
-        Button btnUploadCipher = new Button("Đẩy file ciphertext lên (Upload)");
-        final File[] cipherFile = {null};
+        Label title = new Label("XÁC MINH CHỮ KÝ");
+        title.setStyle("-fx-font-size: 24px; -fx-font-weight: bold;");
+        title.setMaxWidth(Double.MAX_VALUE);
+        title.setAlignment(Pos.CENTER);
 
-        TextArea taPlainOut = new TextArea();
-        taPlainOut.setPromptText("Kết quả giải mã sẽ hiện ở đây...");
-        taPlainOut.setPrefRowCount(7);
+        Button btnLoadPubPem = new Button("Nhập khóa công khai (PEM)");
+        btnLoadPubPem.setStyle("-fx-background-color: #ff9aa2; -fx-font-weight: bold;");
 
-        Button btnDecrypt = new Button("Giải mã");
-        Button btnSavePlain = new Button("Tải kết quả xuống (Save)");
+        Button btnLoadText = new Button("Đọc nội dung văn bản");
+        btnLoadText.setStyle("-fx-background-color: #ffe066; -fx-font-weight: bold;");
+
+        HBox topRow = new HBox(12, btnLoadPubPem, btnLoadText);
+        topRow.setAlignment(Pos.CENTER);
+
+        TextArea taPem = new TextArea();
+        taPem.setWrapText(true);
+        taPem.setPrefRowCount(6);
+        taPem.setPromptText("Dán PUBLIC KEY PEM vào đây...");
+
+        TextArea taText = new TextArea();
+        taText.setWrapText(true);
+        taText.setPrefRowCount(10);
+        taText.setPromptText("Nội dung văn bản cần xác minh...");
+
+        Button btnLoadSig = new Button("Đọc file chữ ký");
+        btnLoadSig.setStyle("-fx-background-color: #ff9aa2; -fx-font-weight: bold;");
+        btnLoadSig.setMaxWidth(Double.MAX_VALUE);
+
+        TextArea taSig = new TextArea();
+        taSig.setWrapText(true);
+        taSig.setPrefRowCount(4);
+        taSig.setPromptText("Dán chữ ký Base64 vào đây...");
+
+        Button btnVerify = new Button("Xác Minh");
+        btnVerify.setStyle("-fx-background-color: #2ecc71; -fx-font-weight: bold;");
+        btnVerify.setPrefWidth(160);
+
+        Button btnClear = new Button("Xóa toàn bộ");
+        btnClear.setStyle("-fx-background-color: #e74c3c; -fx-text-fill: white; -fx-font-weight: bold;");
+        btnClear.setPrefWidth(160);
+
+        VBox actionBox = new VBox(10, btnVerify, btnClear);
+        actionBox.setAlignment(Pos.CENTER);
+
+        Label info = new Label();
+        info.setStyle("-fx-font-size: 12px; -fx-font-style: italic;");
+        info.setMaxWidth(Double.MAX_VALUE);
+        info.setAlignment(Pos.CENTER);
+
         Label status = new Label();
+        status.setStyle("-fx-font-size: 14px; -fx-font-weight: bold;");
+        status.setMaxWidth(Double.MAX_VALUE);
+        status.setAlignment(Pos.CENTER);
 
-        btnUploadCipher.setOnAction(e -> {
+        final File[] selectedTextFile = {null};
+
+        btnLoadPubPem.setOnAction(e -> {
+            File f = openDialog(stage, "Chọn Public Key (PEM)", "PEM", "*.pem", "*.*");
+            if (f == null) return;
             try {
-                FileChooser fc = new FileChooser();
-                File f = fc.showOpenDialog(stage);
-                if (f == null) return;
-                cipherFile[0] = f;
-                tfCipherFile.setText(f.getAbsolutePath());
-                String cipher = Files.readString(f.toPath(), StandardCharsets.UTF_8);
-                taCipher.setText(cipher);
+                String pem = Files.readString(f.toPath(), StandardCharsets.UTF_8);
+                taPem.setText(pem);
+
+                // parse thử để báo lỗi sớm
+                PublicKey pub = loadPublicKeyFromPem(pem);
+                info.setText("Key FP=" + fingerprint6(pub));
+                status.setText("✅ Đã nạp khóa công khai.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi upload ciphertext: " + ex.getMessage());
+                info.setText("");
+                status.setText("❌ Lỗi nạp public key: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        btnDecrypt.setOnAction(e -> {
+        btnLoadText.setOnAction(e -> {
+            File f = openDialog(stage, "Chọn file văn bản", "Text", "*.txt", "*.md", "*.log", "*.*");
+            if (f == null) return;
             try {
-                if (!st.ready()) throw new IllegalStateException("Chưa có khóa. Sang tab 'Sinh khóa' trước.");
-                String cipherText;
-                if (cipherFile[0] != null) {
-                    cipherText = Files.readString(cipherFile[0].toPath(), StandardCharsets.UTF_8);
+                selectedTextFile[0] = f;
+                byte[] bytes = Files.readAllBytes(f.toPath());
+                taText.setText(new String(bytes, StandardCharsets.UTF_8));
+                status.setText("✅ Đã đọc nội dung văn bản.");
+            } catch (Exception ex) {
+                status.setText("❌ Lỗi đọc văn bản: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
+            }
+        });
+
+        btnLoadSig.setOnAction(e -> {
+            File f = openDialog(stage, "Chọn file chữ ký", "SIG", "*.sig", "*.*");
+            if (f == null) return;
+            try {
+                String b64 = Files.readString(f.toPath(), StandardCharsets.UTF_8);
+                taSig.setText(b64);
+                status.setText("✅ Đã đọc file chữ ký.");
+            } catch (Exception ex) {
+                status.setText("❌ Lỗi đọc chữ ký: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
+            }
+        });
+
+        // user gõ tay thì coi như không dùng file
+        taText.textProperty().addListener((o, ov, nv) -> selectedTextFile[0] = null);
+
+        btnVerify.setOnAction(e -> {
+            try {
+                // ====== 1) BẮT BUỘC: PUBLIC KEY PEM ======
+                String pemText = taPem.getText() == null ? "" : taPem.getText().trim();
+                if (pemText.isEmpty()) throw new IllegalStateException("Thiếu khóa công khai (PEM).");
+
+                // LUÔN parse lại mỗi lần verify (KHÔNG CACHE)
+                PublicKey pub = loadPublicKeyFromPem(pemText);
+                info.setText("Key FP=" + fingerprint6(pub));
+
+                // ====== 2) BẮT BUỘC: NỘI DUNG VĂN BẢN ======
+                byte[] msgBytes;
+                if (selectedTextFile[0] != null) {
+                    msgBytes = Files.readAllBytes(selectedTextFile[0].toPath());
                 } else {
-                    cipherText = taCipher.getText();
+                    String text = taText.getText() == null ? "" : taText.getText();
+                    text = text.replace("\r\n", "\n"); // normalize newline
+                    msgBytes = text.getBytes(StandardCharsets.UTF_8);
+                }
+                if (msgBytes.length == 0) throw new IllegalStateException("Thiếu nội dung văn bản cần xác minh.");
+
+                // ====== 3) BẮT BUỘC: CHỮ KÝ BASE64 ======
+                String b64 = taSig.getText() == null ? "" : taSig.getText();
+                b64 = b64.replaceAll("\\s+", ""); // remove spaces/newlines
+                if (b64.isEmpty()) throw new IllegalStateException("Thiếu chữ ký Base64.");
+
+                byte[] sigBytes;
+                try {
+                    sigBytes = Base64.getDecoder().decode(b64);
+                } catch (IllegalArgumentException ex) {
+                    throw new IllegalStateException("Chữ ký không đúng Base64.");
+                }
+                if (sigBytes.length == 0) throw new IllegalStateException("Chữ ký rỗng.");
+
+                // ====== 4) VERIFY ======
+                Signature verifier = Signature.getInstance("SHA256withRSA");
+                verifier.initVerify(pub);
+                verifier.update(msgBytes);
+                boolean ok = verifier.verify(sigBytes);
+
+                if (ok) {
+                    status.setText("✅ Thành công, Hợp lệ");
+                    showAlert(Alert.AlertType.INFORMATION, "Kết quả", "✅ Thành công, Hợp lệ");
+                } else {
+                    status.setText("❌ Văn bản đã bị sửa đổi, ko toàn vẹn");
+                    showAlert(Alert.AlertType.WARNING, "Kết quả", "❌ Văn bản đã bị sửa đổi, ko toàn vẹn");
                 }
 
-                byte[] plainBytes = rsaDecryptText(cipherText, st.n, st.d);
-                String plain = new String(plainBytes, StandardCharsets.UTF_8);
-                taPlainOut.setText(plain);
-                status.setText("✅ Giải mã OK.");
             } catch (Exception ex) {
-                status.setText("❌ Lỗi giải mã: " + ex.getMessage());
+                status.setText("❌ Lỗi xác minh: " + ex.getMessage());
+                showAlert(Alert.AlertType.ERROR, "Lỗi", ex.getMessage());
             }
         });
 
-        btnSavePlain.setOnAction(e -> {
-            try {
-                String plain = taPlainOut.getText();
-                FileChooser fc = new FileChooser();
-                fc.setInitialFileName("plaintext.txt");
-                File f = fc.showSaveDialog(stage);
-                if (f == null) return;
-                Files.writeString(f.toPath(), plain, StandardCharsets.UTF_8);
-                status.setText("✅ Đã tải plaintext xuống: " + f.getName());
-            } catch (Exception ex) {
-                status.setText("❌ Lỗi lưu plaintext: " + ex.getMessage());
-            }
+        btnClear.setOnAction(e -> {
+            selectedTextFile[0] = null;
+            taPem.clear();
+            taText.clear();
+            taSig.clear();
+            info.setText("");
+            status.setText("");
         });
 
-        GridPane g = new GridPane();
-        g.setHgap(12);
-        g.setVgap(12);
+        root.getChildren().addAll(
+                title,
+                topRow,
+                taPem,
+                taText,
+                btnLoadSig,
+                taSig,
+                actionBox,
+                info,
+                status
+        );
 
-        int r = 0;
-        g.add(new Label("Ciphertext"), 0, r);
-        g.add(taCipher, 1, r, 3, 1);
+        tab.setContent(root);
+        return tab;
+    }
 
-        r++;
-        g.add(new Label("File"), 0, r);
-        g.add(tfCipherFile, 1, r, 2, 1);
-        g.add(btnUploadCipher, 3, r);
+    // ===================== KEY LOAD FOR SIGN =====================
+    private void ensurePrivateKey(Stage stage) throws Exception {
+        if (st.privateKey != null) return;
 
-        r++;
-        g.add(new HBox(10, btnDecrypt, btnSavePlain), 1, r, 3, 1);
+        Alert ask = new Alert(Alert.AlertType.CONFIRMATION);
+        ask.setTitle("Thiếu Private Key");
+        ask.setHeaderText("Chưa có khóa bí mật để ký.");
+        ask.setContentText("Bạn muốn chọn file private_key.pem không?");
+        ButtonType yes = new ButtonType("Chọn file");
+        ButtonType no = new ButtonType("Hủy", ButtonBar.ButtonData.CANCEL_CLOSE);
+        ask.getButtonTypes().setAll(yes, no);
 
-        r++;
-        g.add(new Label("Kết quả (plaintext)"), 0, r);
-        g.add(taPlainOut, 1, r, 3, 1);
+        ButtonType r = ask.showAndWait().orElse(no);
+        if (r != yes) throw new IllegalStateException("Bạn chưa cung cấp Private Key.");
 
-        VBox root = new VBox(12, title, g, status);
-        root.setPadding(new Insets(16));
-        return root;
+        File f = openDialog(stage, "Chọn Private Key (PEM)", "PEM", "*.pem", "*.*");
+        if (f == null) throw new IllegalStateException("Bạn chưa chọn Private Key.");
+
+        String pem = Files.readString(f.toPath(), StandardCharsets.UTF_8);
+        st.privateKey = loadPrivateKeyFromPem(pem);
+    }
+
+    // ===================== PEM + PARSE =====================
+    private static String toPem(String type, byte[] der) {
+        String b64 = Base64.getEncoder().encodeToString(der);
+        StringBuilder sb = new StringBuilder();
+        sb.append("-----BEGIN ").append(type).append("-----\n");
+        for (int i = 0; i < b64.length(); i += 64) {
+            sb.append(b64, i, Math.min(i + 64, b64.length())).append("\n");
+        }
+        sb.append("-----END ").append(type).append("-----\n");
+        return sb.toString();
+    }
+
+    private static byte[] fromPem(String pem) {
+        if (pem == null) throw new IllegalArgumentException("PEM rỗng.");
+        String normalized = pem
+                .replaceAll("-----BEGIN [A-Z ]+-----", "")
+                .replaceAll("-----END [A-Z ]+-----", "")
+                .replaceAll("\\s", "");
+        if (normalized.isEmpty()) throw new IllegalArgumentException("PEM không hợp lệ (không có Base64).");
+        return Base64.getDecoder().decode(normalized);
+    }
+
+    private static PublicKey loadPublicKeyFromPem(String pem) throws Exception {
+        if (!pem.contains("BEGIN PUBLIC KEY")) {
+            throw new IllegalArgumentException("Sai header. Public key phải là 'BEGIN PUBLIC KEY'.");
+        }
+        byte[] der = fromPem(pem);
+        X509EncodedKeySpec spec = new X509EncodedKeySpec(der);
+        return KeyFactory.getInstance("RSA").generatePublic(spec);
+    }
+
+    private static PrivateKey loadPrivateKeyFromPem(String pem) throws Exception {
+        if (!pem.contains("BEGIN PRIVATE KEY")) {
+            throw new IllegalArgumentException("Sai header. Private key phải là 'BEGIN PRIVATE KEY'.");
+        }
+        byte[] der = fromPem(pem);
+        PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(der);
+        return KeyFactory.getInstance("RSA").generatePrivate(spec);
+    }
+
+    private static String fingerprint6(PublicKey k) throws Exception {
+        MessageDigest md = MessageDigest.getInstance("SHA-256");
+        byte[] h = md.digest(k.getEncoded());
+        return String.format("%02X%02X%02X%02X%02X%02X", h[0], h[1], h[2], h[3], h[4], h[5]);
+    }
+
+    // ===================== COMMON HELPERS =====================
+    private static BigInteger parseBigInt(String s, String name) {
+        String t = s == null ? "" : s.trim();
+        if (t.isEmpty()) throw new IllegalArgumentException("Thiếu giá trị " + name);
+        try {
+            return new BigInteger(t);
+        } catch (Exception ex) {
+            throw new IllegalArgumentException(name + " không hợp lệ (phải là số nguyên).");
+        }
+    }
+
+    private static File openDialog(Stage stage, String title, String desc, String... exts) {
+        FileChooser fc = new FileChooser();
+        fc.setTitle(title);
+        fc.getExtensionFilters().add(new FileChooser.ExtensionFilter(desc, exts));
+        return fc.showOpenDialog(stage);
+    }
+
+    private static File saveDialog(Stage stage, String defaultName) {
+        FileChooser fc = new FileChooser();
+        fc.setInitialFileName(defaultName);
+        return fc.showSaveDialog(stage);
+    }
+
+    private static void showAlert(Alert.AlertType type, String title, String content) {
+        Alert a = new Alert(type);
+        a.setTitle(title);
+        a.setHeaderText(null);
+        a.setContentText(content);
+        a.showAndWait();
     }
 
     public static void main(String[] args) {
         launch(args);
     }
 }
-
